k8/deployment.yaml
apiVersion: v1
items:
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    annotations:
      deployment.kubernetes.io/revision: "1"
    creationTimestamp: "2022-10-04T11:46:12Z"
    generation: 1
    labels:
      app: object-builder
      io.codefresh.auto-generated: 3df10c21-1ecb-459f-8c49-c96827dcdf2f
      io.codefresh.generated-at: "1664883972717"
    name: object-builder
    namespace: object-builder
    resourceVersion: "94891594"
    uid: c6127c06-2d82-47f8-a443-2e3eecc05bd3
  spec:
    progressDeadlineSeconds: 600
    replicas: 1
    revisionHistoryLimit: 10
    selector:
      matchLabels:
        app: object-builder
    strategy:
      rollingUpdate:
        maxSurge: 50%
        maxUnavailable: 50%
      type: RollingUpdate
    template:
      metadata:
        annotations:
          forceRedeployUniqId: 081c8868-c84b-4dd0-a286-676cbc9a366c
        creationTimestamp: null
        labels:
          app: object-builder
          io.codefresh.auto-generated: 3df10c21-1ecb-459f-8c49-c96827dcdf2f
          io.codefresh.generated-at: "1664883972717"
      spec:
        containers:
        - image: regnosys-docker-registry.jfrog.io/regnosys/poc/object-builder:mp
          imagePullPolicy: Always
          name: object-builder
          ports:
          - containerPort: 80
            protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
        dnsPolicy: ClusterFirst
        imagePullSecrets:
        - name: codefresh-generated-regnosys-docker-registry.jfrog.io-regnosys-docker-registry-object-builder
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 40
  status:
    availableReplicas: 1
    conditions:
    - lastTransitionTime: "2022-10-04T11:46:16Z"
      lastUpdateTime: "2022-10-04T11:46:16Z"
      message: Deployment has minimum availability.
      reason: MinimumReplicasAvailable
      status: "True"
      type: Available
    - lastTransitionTime: "2022-10-04T11:46:12Z"
      lastUpdateTime: "2022-10-04T11:46:16Z"
      message: ReplicaSet "object-builder-5757b96684" has successfully progressed.
      reason: NewReplicaSetAvailable
      status: "True"
      type: Progressing
    observedGeneration: 1
    readyReplicas: 1
    replicas: 1
    updatedReplicas: 1
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
