k8/service.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Service
  metadata:
    creationTimestamp: "2022-10-04T11:46:12Z"
    labels:
      io.codefresh.auto-generated: e041a6c6-7e24-4b85-9a4e-5d0ea1c61eba
      io.codefresh.generated-at: "1664883972545"
    name: object-builder
    namespace: object-builder
    resourceVersion: "94891554"
    uid: 8932801f-ca6a-448e-8b54-612b218c57e7
  spec:
    clusterIP: 10.68.9.78
    clusterIPs:
    - 10.68.9.78
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: http1
      port: 80
      protocol: TCP
      targetPort: 80
    selector:
      app: object-builder
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
