k8/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
  name: object-builder-ingress
  namespace: object-builder
spec:
  rules:
  - host: object-builder.dev.rosetta-technology.io
    http:
      paths:
      - backend:
          service:
            name: object-builder
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - object-builder.dev.rosetta-technology.io
    secretName: object-builder-cert
